--- a/app/app.css
+++ b/app/app.css
@@ -1,11 +1,16 @@
 /* app css stylesheet */
 
+body {
+  font-family: Helvetica;
+}
+
 h3 {
   margin-bottom: 40px;
+  color:grey;
 }
 
 h5 {
-  color: #31b0d5;
+  color: grey;
 }
 
 .menu {
@@ -38,9 +43,9 @@ h5 {
 }
 
 .table td {
-   text-align: center;
-   padding: 0px !important;
-   width:9%;
+  text-align: center;
+  padding: 0px !important;
+  width:9%;
 }
 
 .container {
@@ -50,67 +55,79 @@ h5 {
 }
 
 .icon {
-    position: relative;
-       height: 40px;
-
+  position: relative;
+  height: 40px;
 }
  
 .icon:before {
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    font-size: 19px;
-    text-align:center;
-    position: absolute;
-    top: 10px;
-    left: 0;
-    width:100%;
-    color:white;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  font-size: 19px;
+  text-align:center;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width:100%;
+  color:white;
 }
 
 .question:before {
   content: "\f128";
   background-color: #827AB6;
 }
+
 .home:before {
   content: "\f015";
-  background-color: limegreen;
+  background-color: #5cb85c;
 }
+
 .morning:before {
   content: "\f0f4";
-  background-color: orange;
+  background-color: #FFDD54;
 }
+
 .afternoon:before {
   content: "\f185";
-  background-color: #EFE6B0;
+  background-color: #F24141;
 }
+
 .night:before {
   content: "\f186";
-  background-color: #827AB6;
+  background-color: #428bca;
+}
+
+button span {
+  padding: 5px;
 }
 
 .home-circle button span {
-    background-color: limegreen;
-    border-radius: 32px;
-  }
-  
-.morning-circle button span {
-  background-color: orange;
+  background-color: #5cb85c;
   border-radius: 32px;
+  font-weight: 900;
 }
 
-  .afternoon-circle button span {
-    background-color: #EFE6B0;
-    border-radius: 32px;
-  }
+.morning-circle button span {
+  background-color: #FFDD54;
+  border-radius: 32px;
+  font-weight: 900;
+}
 
-    .night-circle button span {
-    background-color: #827AB6;
-    border-radius: 32px;
-  }
-  .text-muted{
-    opacity: 0.2;
-    border-radius: 32px;
-    color: black;
+.afternoon-circle button span {
+  background-color: #F24141;
+  border-radius: 32px;
+  font-weight: 900;
+}
+
+.night-circle button span {
+  background-color: #428bca;
+  border-radius: 32px;
+  font-weight: 900;
+}
+
+.text-muted{
+  opacity: 0.2;
+  border-radius: 32px;
+  color: black;
 }
